# thales

./: CMakeLists.txt  README.md
thales/: command_line_parser.cpp  command_line_parser.hpp  interpreter.cpp  interpreter.hpp  thales.cpp
